# ntt-lib

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  ntt-lib.json
PCBuild/Linux/Debug/: g.sh  gb.sh  t.sh
PCBuild/Linux/Release/: b.sh  g.sh  gbt.sh
PCBuild/Windows/MinGW/Debug/: b.bat  e.bat  g.bat  t.bat
PCBuild/Windows/MinGW/Release/: b.bat  d.bat  e.bat  g.bat  gb.bat  gbt.bat  t.bat
PCBuild/Windows/VS22/: d.bat  g.bat
docs/: Doxyfile
examples/: CMakeLists.txt  json_example.cpp  print_example.cpp  string_example.cpp
include/: NTTLib.hpp
src/: assert.cpp  assert.hpp  color.hpp  common.hpp  def_utils.hpp  format.cpp  format.hpp  json.cpp  json.hpp  linux_print.cpp  memory.cpp  memory.hpp  primitive_defs.hpp  print.hpp  string.cpp  string.hpp  window_print.cpp
test/: assert_test.cpp  format_test.cpp  json_test.cpp  memory_test.cpp  string_test.cpp  test_common.hpp
vendors/: CMakeLists.txt
